2008-01-27  Jb Evain  <jbevain@novell.com>

	* ConditionalExpression.cs: implement Emit.

2008-01-27  Jb Evain  <jbevain@novell.com>

	* Expression.cs: implement the last Lambda method.

2008-01-27  Jb Evain  <jbevain@novell.com>

	* LambdaExpression.cs: fix the Type of the LambdaExpressions.

2008-01-27  Olivier Dufour  <olivier.duff@gmail.com>

	* Expression.cs, InvocationExpession.cs,
	ListInitExpression.cs, MemberInitExpression.cs
	NewExpression.cs : Add all missing 
	constructor in Expressions and remove the base one

2008-01-25  Jb Evain  <jbevain@novell.com>

	* Expression.cs, ExpressionPrinter.cs: implement Bind.

2008-01-25  Jb Evain  <jbevain@novell.com>

	* MemberMemberBinding.cs, MemberListBinding.cs,
	MemberAssignment.cs, MemberBinding.cs:
	add constructors.

2008-01-25  Jb Evain  <jbevain@novell.com>

	* Expression.cs: implement PropertyOrField.

2008-01-24  Jb Evain  <jbevain@novell.com>

	* Expression.cs, MemberExpression.cs, ExpressionPrinter.cs:
	implement Field and Property.

2008-01-22  Miguel de Icaza  <miguel@novell.com>

	* BinaryExpression.cs: Unleash the power of cut and paste.

	Bring a bunch of operatros from mcs/expression.cs

	* Expression.cs: There is no op_LogicalAnd or op_LogicalOr, I just
	used those from mcs, that was wrong.   use the proper ones, clean
	up the result.

	* BinaryExpression.cs: Add method invocations for binary methods. 

2008-01-22  Jb Evain  <jbevain@novell.com>

	* Expression.cs, ExpressionPrinter.cs: implement NewArrayList.

2008-01-22  Jb Evain  <jbevain@novell.com>

	* Expression.cs, ExpressionPrinter.cs, NewArrayExpression.cs:
	implement Expression.NewArrayBounds.

2008-01-22  Jb Evain  <jbevain@novell.com>

	* ExpressionPrinter.cs: fix Lambda and Equal.

2008-01-22  Miguel de Icaza  <miguel@novell.com>

	* BinaryExpression.cs (EmitCoalesce): Add support for emitting
	code for Coalesce.

	TODO: this does not use the "Conversion" Lambda, which am not sure
	who generates this or what it is used for.
